--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,3 +1,4 @@
+@import "../base/listas";
 .logo {
     width: 100% 
 }
@@ -15,6 +16,6 @@ ul{
     justify-content: center;
     align-items: center ;
     text-decoration: none;
-    color: white;   
+    color: nth($colores,2);   
     font-size: 125%;
 }
