--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,10 +1,11 @@
 /* inicio index */
+@import "../base/listas";
 h1 {
     display: flex;
     justify-content: center;
     font-size: 200%;
     margin: 3%;
-    color: silver;
+    color:nth($colores,6);
 }
 
 div {
@@ -17,7 +18,7 @@ div {
 }
 
 .parrafo-section {
-    color: white;
+    color: nth($colores,2);
     border: solid 3px silver  ;
     margin-top: 5%;
     margin-bottom: 5%;
