--- a/scss/components/_page-mujer.scss
+++ b/scss/components/_page-mujer.scss
@@ -6,7 +6,7 @@
 }
 
 @media screen and (min-width:1024px) {
-    .card-img-top:hover {
+    .card-img-top-mujer:hover {
         transform: scale(1.5);
         border: 2px solid gold; 
         transition: 1s;
