--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 /* inicio footer */
 @import "../base/extends";
-
+@import"../base/maps";
 footer{
     display: grid;
     grid-template-columns: 5% 5% 5% 85%;
