--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,7 @@
 @import "../base/listas";
 @import"../base/extends";
+@import"../base/maps";
+
 .logo {
     width: 100% 
 }
@@ -10,7 +12,7 @@
 ul{
     background-color: black;
     display: grid;
-    grid-template-columns: 10% repeat(3,30%);
+    grid-template-columns: map-get($header-col,columnas);
 }
 .barra{
     @extend %justificar;
