--- a/scss/components/_nosotros.scss
+++ b/scss/components/_nosotros.scss
@@ -5,18 +5,16 @@
     color: nth($colores,2);
     font-size: 150%;
     margin: 10% 0;
+    @extend %justificar;
 }
 .seccion-nosotros {
     display: grid;
-    grid-template-columns: 50%;
 }
 .parrafo-nosotros {
     color: nth($colores,6);
-    display: flex;
+    
 }
 .parrafo-nosotros:hover {
-    transform: scale(1.5);
-    transition: 1.5s;
     color: nth($colores,4);
 
 }
