--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,4 @@
 @import"../scss/components/footer";
 @import"../scss/components/page-mujer";
 @import"../scss/components/nosotros";
+@import"../scss/components/page-hombre";
